--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,18 +15,17 @@
       cdkDropList
       id="todo"
       #todoList="cdkDropList"
-      [cdkDropListData]="todo$ | async"
+      [cdkDropListData]="tasks.todo()"
       [cdkDropListConnectedTo]="[doneList, inProgressList]"
       (cdkDropListDropped)="drop($event)"
       class="list"
     >
-      <p class="empty-label" *ngIf="(todo$ | async)?.length === 0">
-        Empty list
-      </p>
+      <p class="empty-label" *ngIf="tasks.todo()?.length === 0">Empty list</p>
       <app-task
         (edit)="editTask('todo', $event)"
-        *ngFor="let task of todo$ | async"
+        *ngFor="let task of tasks.todo()"
         cdkDrag
+        [cdkDragData]="task"
         [task]="task"
       ></app-task>
     </mat-card>
@@ -38,18 +37,19 @@
       cdkDropList
       id="inProgress"
       #inProgressList="cdkDropList"
-      [cdkDropListData]="inProgress$ | async"
+      [cdkDropListData]="tasks.inProgress()"
       [cdkDropListConnectedTo]="[todoList, doneList]"
       (cdkDropListDropped)="drop($event)"
       class="list"
     >
-      <p class="empty-label" *ngIf="(inProgress$ | async)?.length === 0">
+      <p class="empty-label" *ngIf="tasks.inProgress()?.length === 0">
         Empty list
       </p>
       <app-task
         (edit)="editTask('inProgress', $event)"
-        *ngFor="let task of inProgress$ | async"
+        *ngFor="let task of tasks.inProgress()"
         cdkDrag
+        [cdkDragData]="task"
         [task]="task"
       ></app-task>
     </mat-card>
@@ -61,18 +61,17 @@
       cdkDropList
       id="done"
       #doneList="cdkDropList"
-      [cdkDropListData]="done$ | async"
+      [cdkDropListData]="tasks.done()"
       [cdkDropListConnectedTo]="[todoList, inProgressList]"
       (cdkDropListDropped)="drop($event)"
       class="list"
     >
-      <p class="empty-label" *ngIf="(done$ | async)?.length === 0">
-        Empty list
-      </p>
+      <p class="empty-label" *ngIf="tasks.done()?.length === 0">Empty list</p>
       <app-task
         (edit)="editTask('done', $event)"
-        *ngFor="let task of done$ | async"
+        *ngFor="let task of tasks.done()"
         cdkDrag
+        [cdkDragData]="task"
         [task]="task"
       ></app-task>
     </mat-card>
